edited radlite to handle renaming of datacubes properly

--- a/notebooks/make_radmc3d_model.ipynb
+++ b/notebooks/make_radmc3d_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "be319c2d-9efb-484b-9e06-fadec24b287c",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "0387ee3f-972b-4047-8072-5a9b640dd99b",
    "metadata": {},
    "outputs": [],
@@ -38,13 +38,13 @@
     "dusttogas = 0.01          # dust to gas ratio\n",
     "rin = '0.0*au'           # inner disk radius\n",
     "rdisk = '5*au'           # outer disk radius\n",
-    "gap_rin='[0.2*au]'        # gap inner radius\n",
-    "gap_rout='[0.5*au]'         # gap outer radius"
+    "gap_rin='[0.3*au]'        # gap inner radius\n",
+    "gap_rout='[0.6*au]'         # gap outer radius"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "3b20863f-f27e-48f9-8aa4-6844e62d55ee",
    "metadata": {},
    "outputs": [
@@ -76,19 +76,23 @@
     "# set up the model and write out new style files for radmc\n",
     "# note you need to have dustkappa_silicate.inp in this directory\n",
     "# note that I have changed the boundary for the radial grid to cover more of the inner disk\n",
-    "# this also required increasing the number of photons for the thermal dust calculation\n",
+    "# (0.1 au is roughly the dust sublimation radius given the radius & temperature of the protostar)\n",
+    "# increase the number of photons for the thermal dust calculation to ensure no zeros in Tdust\n",
     "analyze.writeDefaultParfile('ppdisk')\n",
     "model_new = setup.problemSetupDust(model='ppdisk', mstar=mstar, rstar=rstar, tstar=tstar,\n",
     "                                   mdisk=mdisk, dusttogas=dusttogas,\n",
     "                                   rin=rin, rdisk=rdisk,\n",
-    "                                   xbound='[0.1*au, 1.0*au, 30.0*au]', nphot=1e6,\n",
-    "                                   gap_rin=gap_rin, gap_rout=gap_rout, gap_drfact='[1e-5]',\n",
+    "                                   xbound='[0.1*au, 1.0*au, 10.0*au]',\n",
+    "                                   nx='[50,50]',\n",
+    "                                   #xres_nlev=3, xres_nspan=3, xres_nstep=3,\n",
+    "                                   nphot=1e6,\n",
+    "                                   gap_rin=gap_rin, gap_rout=gap_rout, gap_drfact='[1e-8]',\n",
     "                                   nz='0', binary=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "d4712b2d-7a3f-4388-844d-55b6dcd85459",
    "metadata": {},
    "outputs": [],
@@ -99,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "e00c8fec-0854-430e-b074-fd6ff2e52022",
    "metadata": {},
    "outputs": [
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "2a72ea03-c4d7-4c05-8b5e-717605f163e8",
    "metadata": {},
    "outputs": [
@@ -147,7 +151,7 @@
        "0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "d4340ffb-c22d-4502-9ebe-3c94ce7dc1d7",
    "metadata": {},
    "outputs": [
@@ -209,7 +213,7 @@
        "0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "56dfc9a1-466c-48a2-9860-d5d30937b170",
    "metadata": {},
    "outputs": [
@@ -242,8 +246,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "mv: rename run_radlite.ipynb to radmc_outputs/run_radlite.ipynb: No such file or directory\n",
-      "mv: rename model.json to radmc_outputs/model.json: No such file or directory\n",
+      "mv: rename run_radlite*.ipynb to radmc_outputs/run_radlite*.ipynb: No such file or directory\n",
+      "mv: rename model*.json to radmc_outputs/model*.json: No such file or directory\n",
       "mv: spectrum.json: No such file or directory\n",
       "mv: line.inp: No such file or directory\n",
       "mv: molecule_co.inp: No such file or directory\n"
@@ -251,7 +255,7 @@
     }
    ],
    "source": [
-    "filelist = [\"run_radlite.ipynb\", \"model.json\", \"spectrum.json\", \"line.inp\", \"molecule_co.inp\"]\n",
+    "filelist = [\"run_radlite*.ipynb\", \"model*.json\", \"spectrum.json\", \"line.inp\", \"molecule_co.inp\"]\n",
     "for file in filelist:\n",
     "    os.system(\"mv \"+file+\" radmc_outputs/\")"
    ]
@@ -259,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18c44648-7c8e-495c-871f-960fd2c4e034",
+   "id": "618fb1bb-3c55-4db8-9584-552915e5312c",
    "metadata": {},
    "outputs": [],
    "source": []
