small improvements to notebooks

--- a/notebooks/make_radmc3d_model.ipynb
+++ b/notebooks/make_radmc3d_model.ipynb
@@ -36,16 +36,31 @@
     "\n",
     "mdisk = '1e-4*ms'         # dust disk mass\n",
     "dusttogas = 0.01          # dust to gas ratio\n",
-    "rin = '0.0*au'           # inner disk radius\n",
-    "rdisk = '5*au'           # outer disk radius\n",
+    "rin = '0.0*au'            # inner disk radius\n",
+    "rdisk = '5*au'            # outer disk radius\n",
     "gap_rin='[0.3*au]'        # gap inner radius\n",
-    "gap_rout='[0.6*au]'         # gap outer radius"
+    "gap_rout='[0.6*au]'       # gap outer radius"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3b20863f-f27e-48f9-8aa4-6844e62d55ee",
+   "id": "99449293-85cf-43e3-9adc-f7b59a723197",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keys = {'model':'ppdisk', 'mstar':mstar, 'rstar':rstar, 'tstar':tstar,\n",
+    "        'mdisk':mdisk, 'dusttogas':dusttogas,\n",
+    "        'rin':rin, 'rdisk':rdisk,\n",
+    "        'gap_rin':gap_rin, 'gap_rout':gap_rout, 'gap_drfact':'[1e-8]',\n",
+    "        'xbound':'[0.1*au, 1.0*au, 10.0*au]', 'nx':'[50,50]', 'nphot':1e6,\n",
+    "        'nz':'0', 'binary':False}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0584110d-33d4-4e66-b133-7aca817293cc",
    "metadata": {},
    "outputs": [
     {
@@ -73,26 +88,14 @@
     }
    ],
    "source": [
-    "# set up the model and write out new style files for radmc\n",
-    "# note you need to have dustkappa_silicate.inp in this directory\n",
-    "# note that I have changed the boundary for the radial grid to cover more of the inner disk\n",
-    "# (0.1 au is roughly the dust sublimation radius given the radius & temperature of the protostar)\n",
-    "# increase the number of photons for the thermal dust calculation to ensure no zeros in Tdust\n",
+    "# setup in new format for radmc3d\n",
     "analyze.writeDefaultParfile('ppdisk')\n",
-    "model_new = setup.problemSetupDust(model='ppdisk', mstar=mstar, rstar=rstar, tstar=tstar,\n",
-    "                                   mdisk=mdisk, dusttogas=dusttogas,\n",
-    "                                   rin=rin, rdisk=rdisk,\n",
-    "                                   xbound='[0.1*au, 1.0*au, 10.0*au]',\n",
-    "                                   nx='[50,50]',\n",
-    "                                   #xres_nlev=3, xres_nspan=3, xres_nstep=3,\n",
-    "                                   nphot=1e6,\n",
-    "                                   gap_rin=gap_rin, gap_rout=gap_rout, gap_drfact='[1e-8]',\n",
-    "                                   nz='0', binary=False)"
+    "setup.problemSetupDust(**keys)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d4712b2d-7a3f-4388-844d-55b6dcd85459",
    "metadata": {},
    "outputs": [],
@@ -103,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e00c8fec-0854-430e-b074-fd6ff2e52022",
    "metadata": {},
    "outputs": [
@@ -112,7 +115,7 @@
      "output_type": "stream",
      "text": [
       "Moving radmc files to output directory ./radmc_outputs\n",
-      "Will overwrite existing files\n"
+      "Directory does not exist; will create\n"
      ]
     }
    ],
@@ -129,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2a72ea03-c4d7-4c05-8b5e-717605f163e8",
    "metadata": {},
    "outputs": [
@@ -141,6 +144,7 @@
       "Reading wavelength_micron.inp\n",
       "Reading dust_density.inp\n",
       "Reading dust_temperature.dat\n",
+      "WARNING: temperature array has zeros -- increase nphot\n",
       "Writing dusttemp_final.dat\n",
       "Writing dusttemp.info\n"
      ]
@@ -151,7 +155,7 @@
        "0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d4340ffb-c22d-4502-9ebe-3c94ce7dc1d7",
    "metadata": {},
    "outputs": [
@@ -213,7 +217,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,12 +226,7 @@
     "# write out the old format radmc files since radlite needs these\n",
     "# note that this overwrites the new format dustopac.inp so first save that and rename it back afterwards!\n",
     "os.system(\"mv dustopac.inp dustopac_newformat.inp\")\n",
-    "\n",
-    "model_old = setup.problemSetupDust(model='ppdisk', mstar=mstar, rstar=rstar, tstar=tstar,\n",
-    "                                   mdisk=mdisk, dusttogas=dusttogas,\n",
-    "                                   rin=rin, rdisk=rdisk,\n",
-    "                                   gap_rin=gap_rin, gap_rout=gap_rout, gap_drfact='[1e-5]',\n",
-    "                                   nz='0', binary=False, old=True)\n",
+    "setup.problemSetupDust(**keys, old=True)\n",
     "\n",
     "filelist = [\"problem_params.inp\", \"dustdens.inp\", \"dustopac.inp\", \"frequency.inp\", \"dustopac_1.inp\", \"radius.inp\", \"theta.inp\", \"starinfo.inp\", \"starspectrum.inp\"]\n",
     "for file in filelist:\n",
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "56dfc9a1-466c-48a2-9860-d5d30937b170",
    "metadata": {},
    "outputs": [
@@ -255,15 +254,20 @@
     }
    ],
    "source": [
+    "# move files over to radmc_outputs for radlite to run\n",
+    "# (I tried and failed to hide any errors that come up if you run this a second time and the files have already been moved...)\n",
     "filelist = [\"run_radlite*.ipynb\", \"model*.json\", \"spectrum.json\", \"line.inp\", \"molecule_co.inp\"]\n",
     "for file in filelist:\n",
-    "    os.system(\"mv \"+file+\" radmc_outputs/\")"
+    "    cmd = \"mv \"+file+\" radmc_outputs/\"\n",
+    "    x = os.system(cmd + \"> /dev/null\")\n",
+    "    if x==0:\n",
+    "        print(cmd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "618fb1bb-3c55-4db8-9584-552915e5312c",
+   "id": "fe9e9e29-f3fc-4e96-9454-87bc15b450bd",
    "metadata": {},
    "outputs": [],
    "source": []
