update notebooks for new directory names

--- a/notebooks/run_radlite_image.ipynb
+++ b/notebooks/run_radlite_image.ipynb
@@ -25,7 +25,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n"
+     ]
+    }
+   ],
    "source": [
     "#Import Python-RADLite package\n",
     "import radlite as RDL"
@@ -64,7 +72,8 @@
       "Jamila Pegues (jamila.pegues@cfa.harvard.edu)\n",
       "Klaus Pontoppidan (pontoppi@stsci.edu)\n",
       "\n",
-      "unofficial changes to work with radmc3dPyJonathan Williams (jw@hawaii.edu)\n",
+      "unofficial changes to work with radmc3dPy\n",
+      "Jonathan Williams (jw@hawaii.edu)\n",
       "--------------------------------------------------\n",
       "\n",
       "\n",
@@ -99,16 +108,16 @@
       "----------\n",
       "Assembling molecular line data...\n",
       "\n",
-      "Extracting molecular lines from file /Users/jpw/G/py/radlite/HITRAN/CO.par...\n",
+      "Extracting molecular lines from file /Users/jpw/py/radlite/HITRAN/CO.par...\n",
       "There are 4106 molecular lines in total.\n",
       "Removing molecular lines outside of specified criteria...\n",
       "Looks like 2 out of 4106 total lines will be kept...\n",
       "There are 2 molecular lines that fall within ALL specified criteria.\n",
       "Done extracting molecular data!\n",
       "\n",
-      "(Function _read_hitran took 1.61e-02s.)\n",
-      "Extracting partition function info from /Users/jpw/G/py/radlite/HITRAN/ParSum.dat...\n",
-      "There are a total of 23 chemical species in /Users/jpw/G/py/radlite/HITRAN/ParSum.dat.\n",
+      "(Function _read_hitran took 1.58e-02s.)\n",
+      "Extracting partition function info from /Users/jpw/py/radlite/HITRAN/ParSum.dat...\n",
+      "There are a total of 23 chemical species in /Users/jpw/py/radlite/HITRAN/ParSum.dat.\n",
       "Partition information for 12CO has been successfully extracted!\n",
       "\n",
       "Dividing up a total of 2 lines for 7 cores...\n",
@@ -117,27 +126,34 @@
       "----------\n",
       "Preparing molecular line data per core...\n",
       "\n",
-      "Counting up unique levels for 1th core...\n",
-      "Removing any duplicate levels...  To start, there are 2 levels.\n",
-      "2 unique indices found, meaning 2 unique levels.\n",
-      "Counting up unique levels for 0th core...\n",
-      "Removing any duplicate levels...  To start, there are 2 levels.\n",
-      "2 unique indices found, meaning 2 unique levels.\n",
-      "Counting up unique levels for 2th core...\n",
-      "Removing any duplicate levels...  To start, there are 0 levels.\n",
-      "0 unique indices found, meaning 0 unique levels.\n",
-      "Counting up unique levels for 3th core...\n",
-      "Removing any duplicate levels...  To start, there are 0 levels.\n",
-      "0 unique indices found, meaning 0 unique levels.\n",
-      "Counting up unique levels for 4th core...\n",
-      "Removing any duplicate levels...  To start, there are 0 levels.\n",
-      "0 unique indices found, meaning 0 unique levels.\n",
-      "Counting up unique levels for 5th core...\n",
-      "Removing any duplicate levels...  To start, there are 0 levels.\n",
-      "0 unique indices found, meaning 0 unique levels.\n",
+      "Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
       "Counting up unique levels for 6th core...\n",
       "Removing any duplicate levels...  To start, there are 0 levels.\n",
       "0 unique indices found, meaning 0 unique levels.\n",
+      "Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
+      "Counting up unique levels for 3th core...\n",
+      "Removing any duplicate levels...  To start, there are 0 levels.\n",
+      "0 unique indices found, meaning 0 unique levels.\n",
+      "Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
+      "Counting up unique levels for 4th core...\n",
+      "Removing any duplicate levels...  To start, there are 0 levels.\n",
+      "0 unique indices found, meaning 0 unique levels.\n",
+      "Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
+      "Counting up unique levels for 5th core...\n",
+      "Removing any duplicate levels...  To start, there are 0 levels.\n",
+      "0 unique indices found, meaning 0 unique levels.\n",
+      "Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
+      "Counting up unique levels for 2th core...\n",
+      "Removing any duplicate levels...  To start, there are 0 levels.\n",
+      "0 unique indices found, meaning 0 unique levels.\n",
+      "Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
+      "Counting up unique levels for 1th core...\n",
+      "Removing any duplicate levels...  To start, there are 2 levels.\n",
+      "2 unique indices found, meaning 2 unique levels.\n",
+      "Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
+      "Counting up unique levels for 0th core...\n",
+      "Removing any duplicate levels...  To start, there are 2 levels.\n",
+      "2 unique indices found, meaning 2 unique levels.\n",
       "Done preparing molecular line data per core!\n",
       "\n",
       "----------\n",
@@ -145,7 +161,7 @@
       "You can now run RADLite using the run_radlite() method.\n",
       "--------------------\n",
       "\n",
-      "(Function __init__ took 1.06e+00s.)\n"
+      "(Function __init__ took 1.24e+00s.)\n"
      ]
     }
    ],
@@ -173,67 +189,56 @@
      "output_type": "stream",
      "text": [
       "Attempting to create run directory rundir_image...\n",
-      "rundir_image already exists. Will overwrite files within.\n",
       "All input files and final data will be saved to the following folder in the current directory: rundir_image\n",
       "Running RADLite on 7 core(s)...\n",
       "Generating working directory for cores called: ./rundir_image/workingdir\n",
       "All core outputs will be stored in: ./rundir_image/outputdir\n",
-      "Replacing previous ./rundir_image/outputdir...\n",
       "Prepping 0th core...\n",
-      "Starting 0th core in ./rundir_image/workingdir/workingdir_cpu0/...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "mkdir: rundir_image: File exists\n",
-      "mkdir: ./rundir_image/outputdir: File exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Starting 0th core in ./rundir_image/workingdir/workingdir_cpu0/...\n",
       "Prepping 1th core...\n",
       "Starting 1th core in ./rundir_image/workingdir/workingdir_cpu1/...\n",
       "Prepping 2th core...\n",
       "Starting 2th core in ./rundir_image/workingdir/workingdir_cpu2/...\n",
-      "Prepping 3th core...2th core has started working...\n",
+      "Prepping 3th core...Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
+      "2th core has started working...\n",
       "2th core does not have any lines to process.  Exiting...\n",
-      "(Function _run_core took 1.10e-05s.)\n",
+      "(Function _run_core took 5.25e-06s.)\n",
       "\n",
       "Starting 3th core in ./rundir_image/workingdir/workingdir_cpu3/...\n",
-      "Prepping 4th core...3th core has started working...\n",
+      "Prepping 4th core...Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
+      "3th core has started working...\n",
       "3th core does not have any lines to process.  Exiting...\n",
-      "(Function _run_core took 1.22e-05s.)\n",
+      "(Function _run_core took 4.77e-06s.)\n",
       "\n",
       "Starting 4th core in ./rundir_image/workingdir/workingdir_cpu4/...\n",
-      "Prepping 5th core...4th core has started working...\n",
+      "Prepping 5th core...Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
+      "4th core has started working...\n",
       "4th core does not have any lines to process.  Exiting...\n",
-      "(Function _run_core took 1.31e-05s.)\n",
+      "(Function _run_core took 5.96e-06s.)\n",
       "\n",
       "Starting 5th core in ./rundir_image/workingdir/workingdir_cpu5/...\n",
-      "Prepping 6th core...5th core has started working...\n",
+      "Prepping 6th core...Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
+      "5th core has started working...\n",
       "5th core does not have any lines to process.  Exiting...\n",
-      "(Function _run_core took 1.41e-05s.)\n",
+      "(Function _run_core took 4.77e-06s.)\n",
       "\n",
       "Starting 6th core in ./rundir_image/workingdir/workingdir_cpu6/...\n",
-      "Done starting core(s)!6th core has started working...\n",
+      "Done starting core(s)!Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
+      "6th core has started working...\n",
       "6th core does not have any lines to process.  Exiting...\n",
-      "(Function _run_core took 1.31e-05s.)\n",
+      "(Function _run_core took 5.96e-06s.)\n",
       "\n",
+      "Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
       "0th core has started working...\n",
-      "(Function _write_core_levelpopinp took 1.66e-02s.)\n",
-      "./rundir_image/workingdir/workingdir_cpu0/lineposvel_moldata_1.dat ./rundir_image/outputdir\n",
+      "(Function _write_core_levelpopinp took 4.56e-02s.)\n",
       "0th core has finished working!\n",
-      "(Function _run_core took 1.60e+01s.)\n",
+      "(Function _run_core took 2.06e+01s.)\n",
       "0th core finished and closed!\n",
+      "Fast (Fortran90) Mie-scattering module could not be imported. Falling back to the slower Python version.\n",
       "1th core has started working...\n",
-      "(Function _write_core_levelpopinp took 1.73e-02s.)\n",
-      "./rundir_image/workingdir/workingdir_cpu1/lineposvel_moldata_1.dat ./rundir_image/outputdir\n",
+      "(Function _write_core_levelpopinp took 4.63e-02s.)\n",
       "1th core has finished working!\n",
-      "(Function _run_core took 1.61e+01s.)\n",
+      "(Function _run_core took 2.04e+01s.)\n",
       "1th core finished and closed!\n",
       "2th core finished and closed!\n",
       "3th core finished and closed!\n",
@@ -243,7 +248,7 @@
       "All core(s) have finished!\n",
       "Deleting working directory used for cores...\n",
       "Done running run_radlite()!\n",
-      "(Function run_radlite took 1.80e+01s.)\n"
+      "(Function run_radlite took 2.23e+01s.)\n"
      ]
     }
    ],
