added temperature parameters to make_model

--- a/notebooks/make_model.ipynb
+++ b/notebooks/make_model.ipynb
@@ -48,7 +48,9 @@
     "rin = '0.1*au'            # inner disk radius\n",
     "rdisk = '5*au'            # outer disk radius\n",
     "gap_rin='[0.0*au]'        # gap inner radius\n",
-    "gap_rout='[0.0*au]'       # gap outer radius"
+    "gap_rout='[0.0*au]'       # gap outer radius\n",
+    "Tmid = 100                # midplane temperature at 1 au\n",
+    "Tatm = 350                # atmospheric temperature at 1 au"
    ]
   },
   {
@@ -63,7 +65,7 @@
     "        'rin':rin, 'rdisk':rdisk,\n",
     "        'xbound':'[0.05*au, 0.5*au, 5.0*au]', 'nx':'[150, 150]', 'nphot':1e6,\n",
     "        'nz':'0', 'binary':False,\n",
-    "        'writeDustTemp':True}"
+    "        'Tmid':Tmid, 'Tatm':Tatm, 'writeDustTemp':True}"
    ]
   },
   {
