small changes to make_model

--- a/notebooks/make_model.ipynb
+++ b/notebooks/make_model.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keys = {'model':'ppdisk_jw', 'mstar':mstar, 'rstar':rstar, 'tstar':tstar,\n",
+    "keys = {'model':'parameterized_disk', 'mstar':mstar, 'rstar':rstar, 'tstar':tstar,\n",
     "        'mdisk':mdisk, 'dusttogas':dusttogas,\n",
     "        'rin':rin, 'rdisk':rdisk,\n",
     "        'xbound':'[0.05*au, 0.5*au, 5.0*au]', 'nx':'[150, 150]', 'nphot':1e6,\n",
@@ -84,7 +84,7 @@
    ],
    "source": [
     "# setup problem_params.log with default parameters\n",
-    "analyze.writeDefaultParfile('ppdisk_jw')"
+    "analyze.writeDefaultParfile('parameterized_disk')"
    ]
   },
   {
