small changes to make_model

--- a/notebooks/make_model.ipynb
+++ b/notebooks/make_model.ipynb
@@ -204,7 +204,10 @@
     "            \"dust_density.inp\", \"dust_temperature.dat\", \"radmc3d.inp\", \\\n",
     "            \"plot_radmc3d_model.ipynb\"]\n",
     "for file in filelist:\n",
-    "    os.system(\"mv \"+file+\" radmc/\")"
+    "    os.system(\"mv \"+file+\" radmc/\")\n",
+    "\n",
+    "# copy rather than move this file as we still need it for the old format\n",
+    "os.system(\"cp dustkappa_silicate.inp radmc/\")"
    ]
   },
   {
@@ -236,7 +239,7 @@
    "source": [
     "# create problem_params.inp, update parameters, and write out files for radlite)\n",
     "# (note that radlite uses the old format of radmc3d)\n",
-    "analyze.writeDefaultParfile('ppdisk_jw')\n",
+    "analyze.writeDefaultParfile('parameterized_disk')\n",
     "setup.problemSetupDust(**keys, old=True)\n",
     "\n",
     "# get rid of the new format dust temperature file which is not needed\n",
@@ -280,10 +283,7 @@
     "filelist = [\"problem_params.inp\", \"dustdens.inp\", \"dustopac.inp\", \"dusttemp_final.dat\", \"dusttemp.info\", \\\n",
     "            \"frequency.inp\", \"dustopac_1.inp\", \"radius.inp\", \"theta.inp\", \"starinfo.inp\", \"starspectrum.inp\", \"radmc.inp\"]\n",
     "for file in filelist:\n",
-    "    os.system(\"mv \"+file+\" radlite/\")\n",
-    "\n",
-    "# can now move the new format file for the dust over\n",
-    "os.system(\"mv dustkappa_silicate.inp radmc/\")"
+    "    os.system(\"mv \"+file+\" radlite/\")"
    ]
   },
   {
