fits writer outputs WCS

--- a/notebooks/image2fits.ipynb
+++ b/notebooks/image2fits.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +32,17 @@
     "# note units are brightness temperature = lambda**2 * F_nu / 2*k\n",
     "path = \"./radlite/rundir_image/outputdir/\"\n",
     "filename = \"lineposvel_moldata_0_1.dat\"\n",
+    "\n",
+    "# distance of the source in pc\n",
+    "dist = 140.0\n",
+    "\n",
     "with open(path+filename) as f:\n",
     "    try:\n",
     "        blank = f.readline()\n",
     "        iformat = f.readline()\n",
     "        molname1 = f.readline()\n",
     "        molname2 = f.readline()\n",
-    "        dist, v0, incl = [float(abc) for abc in f.readline().split()]\n",
+    "        dist0, v0, incl = [float(abc) for abc in f.readline().split()]\n",
     "        trans = f.readline()\n",
     "        nu0 = float(f.readline())\n",
     "        nv = int(f.readline())\n",
@@ -75,12 +79,18 @@
     "\n",
     "# convert step size to au as in model.json\n",
     "dx /= c.au.cgs.value\n",
-    "dy /= c.au.cgs.value"
+    "dy /= c.au.cgs.value\n",
+    "\n",
+    "# convert flux to Jy and step size to degrees at source distance\n",
+    "# note that 1au at 1pc is 1 arcsecond\n",
+    "Fnu /= dist**2\n",
+    "dx /= (3600*dist)\n",
+    "dy /= (3600*dist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,20 +142,22 @@
     "hd1.set('OBJECT', filename, 'continuum')\n",
     "hd1.set('CRPIX1', nx/2-0.5, 'image center')\n",
     "hd1.set('CRPIX2', ny/2-0.5, 'image center')\n",
-    "hd1.set('CDELT1', round(dx, 3), 'step size in au')\n",
-    "hd1.set('CDELT2', round(dy, 3), 'step size in au')\n",
-    "hd1.set('CRVAL1', 0)\n",
-    "hd1.set('CRVAL2', 0)\n",
-    "hd1.set('CTYPE1', 'RA--SIN')\n",
-    "hd1.set('CTYPE2', 'DEC-SIN')\n",
-    "hd1.set('BUNIT', 'JY/PIXEL')\n",
+    "hd1.set('CDELT1', dx, 'degrees')\n",
+    "hd1.set('CDELT2', dy, 'degrees')\n",
+    "hd1.set('CRVAL1', 0.0, 'degrees')\n",
+    "hd1.set('CRVAL2', 0.0, 'degrees')\n",
+    "hd1.set('CTYPE1', 'RA---SIN')\n",
+    "hd1.set('CTYPE2', 'DEC--SIN')\n",
+    "hd1.set('CUNIT1', 'deg')\n",
+    "hd1.set('CUNIT2', 'deg')\n",
+    "hd1.set('BUNIT', 'Jy/pix')\n",
     "hd1.set('RESTFRQ', nu0, 'line frequency in Hz')\n",
     "hd1.set('WAVELEN', 1e6*c.c.si.value/nu0, 'wavelength in microns')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,43 +167,32 @@
     "hd2.set('CRPIX1', nx/2-0.5, 'image center')\n",
     "hd2.set('CRPIX2', ny/2-0.5, 'image center')\n",
     "hd2.set('CRPIX3', nv/2-0.5, 'center of velocity axis')\n",
-    "hd2.set('CDELT1', round(dx, 3), 'step size in au')\n",
-    "hd2.set('CDELT2', round(dy, 3), 'step size in au')\n",
-    "hd2.set('CDELT3', round(1000*dv, 3), 'step size in km/s')\n",
-    "hd2.set('CRVAL1', 0)\n",
-    "hd2.set('CRVAL2', 0)\n",
+    "hd2.set('CDELT1', dx, 'degrees')\n",
+    "hd2.set('CDELT2', dy, 'degrees')\n",
+    "hd2.set('CDELT3', dv, 'step size in km/s')\n",
+    "hd2.set('CRVAL1', 0.0, 'degrees')\n",
+    "hd2.set('CRVAL2', 0.0, 'degrees')\n",
     "hd2.set('CRVAL3', v0, 'central velocity in km/s')\n",
-    "hd2.set('CTYPE1', 'RA--SIN')\n",
-    "hd2.set('CTYPE2', 'DEC-SIN')\n",
+    "hd2.set('CTYPE1', 'RA---SIN')\n",
+    "hd2.set('CTYPE2', 'DEC--SIN')\n",
     "hd2.set('CTYPE3', 'VELO-LSRK')\n",
-    "hd2.set('BUNIT', 'JY/PIXEL')\n",
+    "hd2.set('CUNIT1', 'deg')\n",
+    "hd2.set('CUNIT2', 'deg')\n",
+    "hd2.set('CUNIT3', 'km/s')\n",
+    "hd2.set('BUNIT', 'Jy/pix')\n",
     "hd2.set('RESTFRQ', nu0, 'line frequency in Hz')\n",
     "hd2.set('WAVELEN', 1e6*c.c.si.value/nu0, 'wavelength in microns')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "hdu_list = fits.HDUList([hdu0, hdu1, hdu2])\n",
     "hdu_list.writeto('radlite_image.fits', overwrite=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
