added wind prescription to velocity field

--- a/notebooks/make_model.ipynb
+++ b/notebooks/make_model.ipynb
@@ -84,7 +84,7 @@
    ],
    "source": [
     "# setup problem_params.log with default parameters\n",
-    "analyze.writeDefaultParfile('parameterized_disk')"
+    "analyze.writeDefaultParfile(keys['model'])"
    ]
   },
   {
@@ -239,7 +239,7 @@
    "source": [
     "# create problem_params.inp, update parameters, and write out files for radlite)\n",
     "# (note that radlite uses the old format of radmc3d)\n",
-    "analyze.writeDefaultParfile('parameterized_disk')\n",
+    "analyze.writeDefaultParfile(keys['model'])\n",
     "setup.problemSetupDust(**keys, old=True)\n",
     "\n",
     "# get rid of the new format dust temperature file which is not needed\n",
