added instruction page

--- a/notebooks/make_model.ipynb
+++ b/notebooks/make_model.ipynb
@@ -307,7 +307,7 @@
    "source": [
     "# move files over to radmc_outputs for radlite to run\n",
     "# (I tried and failed to hide any errors that come up if you run this a second time and the files have already been moved...)\n",
-    "filelist = [\"run_radlite*.ipynb\", \"model*.json\", \"spectrum.json\", \"line.inp\", \"molecule_co.inp\"]\n",
+    "filelist = [\"run_radlite.ipynb\", \"image2fits.py\", \"model*.json\", \"spectrum.json\", \"line.inp\", \"molecule_co.inp\"]\n",
     "for file in filelist:\n",
     "    cmd = \"mv \"+file+\" radlite/\"\n",
     "    x = os.system(cmd + \"> /dev/null\")\n",
