change to a warmer model to extend the CO emitting area

--- a/notebooks/make_model.ipynb
+++ b/notebooks/make_model.ipynb
@@ -45,12 +45,13 @@
     "\n",
     "mdisk = '1e-5*ms'         # dust disk mass\n",
     "dusttogas = 0.001         # dust to gas ratio\n",
-    "rin = '0.1*au'            # inner disk radius\n",
+    "rin = '0.05*au'           # inner disk radius\n",
     "rdisk = '5*au'            # outer disk radius\n",
     "gap_rin='[0.0*au]'        # gap inner radius\n",
     "gap_rout='[0.0*au]'       # gap outer radius\n",
-    "Tmid = 100                # midplane temperature at 1 au\n",
-    "Tatm = 350                # atmospheric temperature at 1 au"
+    "Tmid = 300                # midplane temperature at 1 au\n",
+    "Tatm = 700                # atmospheric temperature at 1 au\n",
+    "Tmax = 2500               # maximum temperature of the gas"
    ]
   },
   {
@@ -65,7 +66,7 @@
     "        'rin':rin, 'rdisk':rdisk,\n",
     "        'xbound':'[0.05*au, 0.5*au, 5.0*au]', 'nx':'[150, 150]', 'nphot':1e6,\n",
     "        'nz':'0', 'binary':False,\n",
-    "        'Tmid':Tmid, 'Tatm':Tatm, 'writeDustTemp':True}"
+    "        'Tmid':Tmid, 'Tatm':Tatm, 'Tmax':Tmax, 'writeDustTemp':True}"
    ]
   },
   {
@@ -177,8 +178,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moving radmc files to output directory ./radmc_outputs_new_format\n",
-      "Directory does not exist; will create\n"
+      "Moving radmc files to output directory ./radmc\n",
+      "Will overwrite existing files\n"
      ]
     }
    ],
@@ -198,7 +199,25 @@
    "execution_count": 8,
    "id": "34a45d35-7a02-4305-8216-3bd2a7cb5fb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "mv: plot_radmc3d_model.ipynb: No such file or directory\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "filelist = [\"problem_params.inp\", \"dustopac.inp\", \"wavelength_micron.inp\", \"amr_grid.inp\", \"stars.inp\", \\\n",
     "            \"dust_density.inp\", \"dust_temperature.dat\", \"radmc3d.inp\", \\\n",
@@ -257,8 +276,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moving radmc files to output directory ./radmc_outputs\n",
-      "Directory does not exist; will create\n"
+      "Moving radmc files to output directory ./radlite\n",
+      "Will overwrite existing files\n"
      ]
     }
    ],
@@ -293,14 +312,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "mv run_radlite*.ipynb radmc_outputs/\n",
-      "mv model*.json radmc_outputs/\n",
-      "mv spectrum.json radmc_outputs/\n",
-      "mv line.inp radmc_outputs/\n",
-      "mv molecule_co.inp radmc_outputs/\n"
+      "mv: run_radlite.ipynb: No such file or directory\n",
+      "mv: image2fits.py: No such file or directory\n",
+      "mv: rename model*.json to radlite/model*.json: No such file or directory\n",
+      "mv: spectrum.json: No such file or directory\n",
+      "mv: line.inp: No such file or directory\n",
+      "mv: molecule_co.inp: No such file or directory\n"
      ]
     }
    ],
